force-app/main/default/objects/Opportunity/fields/Access_Id__c.field-meta.xml
<CustomField>
    <fullName>Access_Id__c</fullName>
    <label>Access Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>