force-app/main/default/objects/Opportunity/fields/Adviser_Split_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Adviser_Split_Outstanding__c</fullName>
    <formula>IF( SF_Paid_Confirmed__c  &lt;&gt; true,  SF_Adviser_Split__c , 0.00)  +  IF( BSF_Paid_Confirmed__c  &lt;&gt; true,   BSF_Adviser_Split__c  , 0.00)  +  IF( UFC_Paid_Confirmed__c  &lt;&gt; true,  UFC_Adviser_Split__c , 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adviser Split Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>