force-app/main/default/objects/Opportunity/fields/Annual_Rent__c.field-meta.xml
<CustomField>
    <fullName>Annual_Rent__c</fullName>
    <label>Annual Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>