force-app/main/default/objects/Opportunity/fields/Any_lenders_you_don_t_wish_to_deal_with__c.field-meta.xml
<CustomField>
    <fullName>Any_lenders_you_don_t_wish_to_deal_with__c</fullName>
    <label>Any lenders you don’t wish to deal with</label>
    <type>TextArea</type>
</CustomField>