force-app/main/default/objects/Opportunity/fields/Any_product_types_you_are_interested_in__c.field-meta.xml
<CustomField>
    <fullName>Any_product_types_you_are_interested_in__c</fullName>
    <label>Any product types you are interested in?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic Loan</fullName>
            </value>
            <value>
                <fullName>Professional Package</fullName>
            </value>
            <value>
                <fullName>Line of Credit</fullName>
            </value>
            <value>
                <fullName>Fixed Rate</fullName>
            </value>
            <value>
                <fullName>Low Doc</fullName>
            </value>
            <value>
                <fullName>Don’t know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>