force-app/main/default/objects/Opportunity/fields/App_1_VOI_Details__c.field-meta.xml
<CustomField>
    <fullName>App_1_VOI_Details__c</fullName>
    <label>App 1 VOI Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>