force-app/main/default/objects/Opportunity/fields/App_1_VOI_eSign_Complete__c.field-meta.xml
<CustomField>
    <fullName>App_1_VOI_eSign_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>App 1 VOI &amp; eSign Complete</label>
    <type>Checkbox</type>
</CustomField>