force-app/main/default/objects/Opportunity/fields/App_2_VOI_Details__c.field-meta.xml
<CustomField>
    <fullName>App_2_VOI_Details__c</fullName>
    <label>App 2 VOI Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>