force-app/main/default/objects/Opportunity/fields/app_Two_completed_Summary__c.field-meta.xml
<CustomField>
    <fullName>app_Two_completed_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>app Two completed Summary</label>
    <type>Checkbox</type>
</CustomField>