force-app/main/default/objects/Opportunity/fields/Applicant_1__c.field-meta.xml
<CustomField>
    <fullName>Applicant_1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Applicant 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Applicant 1)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>