force-app/main/default/objects/Opportunity/fields/Applicant_1_Credit_enquiries_5_years__c.field-meta.xml
<CustomField>
    <fullName>Applicant_1_Credit_enquiries_5_years__c</fullName>
    <label>Applicant 1 Credit enquiries (5 years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>