force-app/main/default/objects/Opportunity/fields/Applicant_1_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Applicant_1_Credit_Score__c</fullName>
    <label>Applicant 1 Credit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>