force-app/main/default/objects/Opportunity/fields/Applicant_1_Email__c.field-meta.xml
<CustomField>
    <fullName>Applicant_1_Email__c</fullName>
    <formula>Applicant_1__r.PersonContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant 1 Email</label>
    <type>Text</type>
</CustomField>