force-app/main/default/objects/Opportunity/fields/Applicant_1_eSign_Status__c.field-meta.xml
<CustomField>
    <fullName>Applicant_1_eSign_Status__c</fullName>
    <label>Applicant 1 eSign Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Opened</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>