force-app/main/default/objects/Opportunity/fields/Applicant_1_Female__c.field-meta.xml
<CustomField>
    <fullName>Applicant_1_Female__c</fullName>
    <formula>IF(ISPICKVAL(Applicant_1__r.PersonContact.Gender__c, &apos;Female&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant 1 Female</label>
    <type>Checkbox</type>
</CustomField>