force-app/main/default/objects/Opportunity/fields/Applicant_1_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Applicant_1_FirstName__c</fullName>
    <formula>Applicant_1__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant 1 FirstName</label>
    <type>Text</type>
</CustomField>