force-app/main/default/objects/Opportunity/fields/Applicant_1_Income_before_tax__c.field-meta.xml
<CustomField>
    <fullName>Applicant_1_Income_before_tax__c</fullName>
    <label>Applicant 1 Income before tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>