force-app/main/default/objects/Opportunity/fields/Applicant_1_Male__c.field-meta.xml
<CustomField>
    <fullName>Applicant_1_Male__c</fullName>
    <formula>IF(ISPICKVAL(Applicant_1__r.PersonContact.Gender__c, &apos;Male&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant 1 Male</label>
    <type>Checkbox</type>
</CustomField>