force-app/main/default/objects/Opportunity/fields/Applicant_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_1_Name__c</fullName>
    <formula>Applicant_1__r.FirstName+&apos; &apos;+Applicant_1__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant 1 Name</label>
    <type>Text</type>
</CustomField>