force-app/main/default/objects/Opportunity/fields/Applicant_1_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Applicant_1_Phone_Number__c</fullName>
    <formula>Applicant_1__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant 1 Phone Number</label>
    <type>Text</type>
</CustomField>