force-app/main/default/objects/Opportunity/fields/Applicant_1_Taxable_Income__c.field-meta.xml
<CustomField>
    <fullName>Applicant_1_Taxable_Income__c</fullName>
    <formula>Applicant_1_Income_before_tax__c +( Applicant_1_share__c * Annual_Rent__c *0.7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant 1 Taxable Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>