force-app/main/default/objects/Opportunity/fields/Applicant_1_VOII_Attached__c.field-meta.xml
<CustomField>
    <fullName>Applicant_1_VOII_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applicant 1: VOII Attached</label>
    <type>Checkbox</type>
</CustomField>