force-app/main/default/objects/Opportunity/fields/Applicant_1_VOII_Notes__c.field-meta.xml
<CustomField>
    <fullName>Applicant_1_VOII_Notes__c</fullName>
    <label>VOII Notes</label>
    <length>550</length>
    <type>LongTextArea</type>
</CustomField>