force-app/main/default/objects/Opportunity/fields/Applicant_2__c.field-meta.xml
<CustomField>
    <fullName>Applicant_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Applicant 2)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>