force-app/main/default/objects/Opportunity/fields/Applicant_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Applicant_2_Email__c</fullName>
    <formula>Applicant_2__r.PersonContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant 2 Email</label>
    <type>Text</type>
</CustomField>