force-app/main/default/objects/Opportunity/fields/Applicant_2_Female__c.field-meta.xml
<CustomField>
    <fullName>Applicant_2_Female__c</fullName>
    <formula>IF(ISPICKVAL(Applicant_2__r.PersonContact.FinServ__Gender__c, &apos;Female&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant 2 Female</label>
    <type>Checkbox</type>
</CustomField>