force-app/main/default/objects/Opportunity/fields/Applicant_2_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Applicant_2_FirstName__c</fullName>
    <formula>Applicant_2__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant 2 FirstName</label>
    <type>Text</type>
</CustomField>