force-app/main/default/objects/Opportunity/fields/Applicant_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_2_Name__c</fullName>
    <formula>Applicant_2__r.FirstName+&apos; &apos;+Applicant_2__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant 2 Name</label>
    <type>Text</type>
</CustomField>