force-app/main/default/objects/Opportunity/fields/Applicant_2_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Applicant_2_Phone_Number__c</fullName>
    <formula>Applicant_2__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant 2 Phone Number</label>
    <type>Text</type>
</CustomField>