force-app/main/default/objects/Opportunity/fields/Applicant_2_share__c.field-meta.xml
<CustomField>
    <fullName>Applicant_2_share__c</fullName>
    <label>Applicant 2 share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>