force-app/main/default/objects/Opportunity/fields/Applicant_2_VOI_Attached__c.field-meta.xml
<CustomField>
    <fullName>Applicant_2_VOI_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applicant 2: VOI Attached</label>
    <type>Checkbox</type>
</CustomField>