force-app/main/default/objects/Opportunity/fields/Applicant_2_VOI_Type__c.field-meta.xml
<CustomField>
    <fullName>Applicant_2_VOI_Type__c</fullName>
    <label>Applicant 2: VOI Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VOI Module - video &amp; code match</fullName>
            </value>
            <value>
                <fullName>VOI Module - video match (no code)</fullName>
            </value>
            <value>
                <fullName>ID &amp; Selfie</fullName>
            </value>
            <value>
                <fullName>Video Call &amp; ID</fullName>
            </value>
            <value>
                <fullName>In person &amp; ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>