force-app/main/default/objects/Opportunity/fields/Applicant_2_VOII_Notes__c.field-meta.xml
<CustomField>
    <fullName>Applicant_2_VOII_Notes__c</fullName>
    <label>Applicant 2: VOII Notes</label>
    <length>550</length>
    <type>LongTextArea</type>
</CustomField>