force-app/main/default/objects/Opportunity/fields/Applicant_Details_Change__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Details_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applicant Details Change</label>
    <type>Checkbox</type>
</CustomField>