force-app/main/default/objects/Opportunity/fields/Application_Amount__c.field-meta.xml
<CustomField>
    <fullName>Application_Amount__c</fullName>
    <formula>SyncedQuote.Total_loan_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>