force-app/main/default/objects/Opportunity/fields/Application_Pending_Notes__c.field-meta.xml
<CustomField>
    <fullName>Application_Pending_Notes__c</fullName>
    <label>Application Pending Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>