force-app/main/default/objects/Opportunity/fields/Application_Pending_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Pending_Status__c</fullName>
    <label>Application Pending Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No action required</fullName>
            </value>
            <value>
                <fullName>Customer Action</fullName>
            </value>
            <value>
                <fullName>Adviser Action</fullName>
            </value>
            <value>
                <fullName>Lender Action</fullName>
            </value>
            <value>
                <fullName>Admin Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>