force-app/main/default/objects/Opportunity/fields/Application_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Application_Revenue__c</fullName>
    <formula>SyncedQuote.Total_Income_Inc_GST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>