force-app/main/default/objects/Opportunity/fields/Application_Sections__c.field-meta.xml
<CustomField>
    <fullName>Application_Sections__c</fullName>
    <label>Application Sections</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Priorities</fullName>
                <default>true</default>
                <label>Priorities</label>
            </value>
            <value>
                <fullName>Loan Recommendation</fullName>
            </value>
            <value>
                <fullName>Getting Started</fullName>
            </value>
            <value>
                <fullName>Who is applying</fullName>
            </value>
            <value>
                <fullName>Own and Owe</fullName>
            </value>
            <value>
                <fullName>Earn</fullName>
            </value>
            <value>
                <fullName>Living Expenses</fullName>
            </value>
            <value>
                <fullName>Preferences</fullName>
            </value>
            <value>
                <fullName>Risk Assessment</fullName>
            </value>
            <value>
                <fullName>Anticipated Changes to Circumstances</fullName>
            </value>
            <value>
                <fullName>Goals &amp; Objectives</fullName>
            </value>
            <value>
                <fullName>VOI</fullName>
            </value>
            <value>
                <fullName>Summary</fullName>
            </value>
            <value>
                <fullName>Mogo Bank Link</fullName>
            </value>
            <value>
                <fullName>Mogo Document Upload</fullName>
            </value>
            <value>
                <fullName>Mogo Document Error</fullName>
            </value>
            <value>
                <fullName>Standard Document Upload</fullName>
            </value>
            <value>
                <fullName>All Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>