force-app/main/default/objects/Opportunity/fields/Application_Supporting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Application_Supporting_Notes__c</fullName>
    <label>Application Supporting Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>