force-app/main/default/objects/Opportunity/fields/Approval_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Expiry_Date__c</fullName>
    <label>Approval Expiry Date</label>
    <type>Date</type>
</CustomField>