force-app/main/default/objects/Opportunity/fields/Approved_Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Expire_Date__c</fullName>
    <formula>DATEVALUE(Approved_Date__c) + 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Expire Date</label>
    <type>Date</type>
</CustomField>