force-app/main/default/objects/Opportunity/fields/Assesment_Rate__c.field-meta.xml
<CustomField>
    <fullName>Assesment_Rate__c</fullName>
    <label>Assesment Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>