force-app/main/default/objects/Opportunity/fields/Assessment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Notes__c</fullName>
    <label>Assessment Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>