force-app/main/default/objects/Opportunity/fields/Battery_capacity__c.field-meta.xml
<CustomField>
    <fullName>Battery_capacity__c</fullName>
    <label>Battery capacity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>