force-app/main/default/objects/Opportunity/fields/Borrower_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Contribution__c</fullName>
    <label>Borrower Contribution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>