force-app/main/default/objects/Opportunity/fields/Broker_confirmation_the_loan_is_not_unsu__c.field-meta.xml
<CustomField>
    <fullName>Broker_confirmation_the_loan_is_not_unsu__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Broker confirmation the loan is not unsuitable</description>
    <inlineHelpText>I have conducted a thorough needs analysis and preliminary assessment of the applicants and the loan I have recommended is not unsuitable to their objectives and financial circumstances. If this is a refinance I also certify the applicants will be better.</inlineHelpText>
    <label>I certify this loan is not unsuitable</label>
    <type>Checkbox</type>
</CustomField>