force-app/main/default/objects/Opportunity/fields/Broker_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Broker_Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broker Declaration</label>
    <type>Checkbox</type>
</CustomField>