force-app/main/default/objects/Opportunity/fields/Brokerage_Service_Fee_inc_GST__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Service_Fee_inc_GST__c</fullName>
    <formula>IF( SyncedQuote.Application__c = True,     SyncedQuote.Brokerage_Amount__c    , IF( ISPICKVAL( BSF_Type__c , &quot;Percentage&quot;) ,  BSF_Rate_inc_GST__c  *  Loan_Amount__c , BSF_Rate_inc_GST__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brokerage Service Fee inc GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>