force-app/main/default/objects/Opportunity/fields/BSB_number__c.field-meta.xml
<CustomField>
    <fullName>BSB_number__c</fullName>
    <label>BSB number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>