force-app/main/default/objects/Opportunity/fields/BSF_Adviser_Split__c.field-meta.xml
<CustomField>
    <fullName>BSF_Adviser_Split__c</fullName>
    <formula>IF( $User.Id = Owner.Id  || $Profile.Name = &quot;System Administrator&quot;  ,  Brokerage_Service_Fee_inc_GST__c / 1.1  *  Owner.Adviser_Brokerage_Service_Fee_Rate__c , 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BSF Adviser Split</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>