force-app/main/default/objects/Opportunity/fields/BSF_Date_Due_Paid__c.field-meta.xml
<CustomField>
    <fullName>BSF_Date_Due_Paid__c</fullName>
    <label>BSF Date Due/Paid</label>
    <type>Date</type>
</CustomField>