force-app/main/default/objects/Opportunity/fields/BSF_Paid_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>BSF_Paid_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BSF Paid Confirmed</label>
    <type>Checkbox</type>
</CustomField>