force-app/main/default/objects/Opportunity/fields/BSF_Rate_inc_GST__c.field-meta.xml
<CustomField>
    <fullName>BSF_Rate_inc_GST__c</fullName>
    <label>BSF Rate inc GST</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>