force-app/main/default/objects/Opportunity/fields/BSF_Type__c.field-meta.xml
<CustomField>
    <fullName>BSF_Type__c</fullName>
    <label>BSF Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>