force-app/main/default/objects/Opportunity/fields/Business_Hours_at_Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_at_Current_Stage__c</fullName>
    <formula>IF(8*(
(5*FLOOR((DATEVALUE(Now())-DATE(1996,01,01))/7) +
MIN(5,
	MOD(DATEVALUE(Now())-DATE(1996,01,01), 7) +
	MIN(1, 24/8*(MOD(Now()-DATETIMEVALUE(&apos;1996-01-01 23:00:00&apos;), 1)))
))
-
(5*FLOOR((DATEVALUE(Last_Stage_Change_Date__c)-DATE(1996,01,01))/7) +
MIN(5,
	MOD(DATEVALUE(Last_Stage_Change_Date__c)-DATE(1996,01,01), 7) +
	MIN(1, 24/8*(MOD(IF(AND(Last_Stage_Change_Date__c &lt; DATETIMEVALUE(TEXT(YEAR(DATEVALUE(Last_Stage_Change_Date__c))) + &apos;-&apos; + TEXT(MONTH(DATEVALUE(Last_Stage_Change_Date__c))) + &apos;-&apos; + TEXT(DAY(DATEVALUE(Last_Stage_Change_Date__c))) + &apos; 23:00:00&apos;),Last_Stage_Change_Date__c &gt;= DATETIMEVALUE(TEXT(YEAR(DATEVALUE(Last_Stage_Change_Date__c))) + &apos;-&apos; + TEXT(MONTH(DATEVALUE(Last_Stage_Change_Date__c))) + &apos;-&apos; + TEXT(DAY(DATEVALUE(Last_Stage_Change_Date__c))) + &apos; 14:00:00&apos;)),DATETIMEVALUE(TEXT(YEAR(DATEVALUE(Last_Stage_Change_Date__c))) + &apos;-&apos; + TEXT(MONTH(DATEVALUE(Last_Stage_Change_Date__c))) + &apos;-&apos; + TEXT(DAY(DATEVALUE(Last_Stage_Change_Date__c))) + &apos; 23:00:00&apos;),Last_Stage_Change_Date__c) - DATETIMEVALUE(&apos;1996-01-01 23:00:00&apos;), 1)))
))
)&lt;0,
8+8*(
(5*FLOOR((DATEVALUE(Now())-DATE(1996,01,01))/7) +
MIN(5,
	MOD(DATEVALUE(Now())-DATE(1996,01,01), 7) +
	MIN(1, 24/8*(MOD(Now()-DATETIMEVALUE(&apos;1996-01-01 23:00:00&apos;), 1)))
))
-
(5*FLOOR((DATEVALUE(Last_Stage_Change_Date__c)-DATE(1996,01,01))/7) +
MIN(5,
	MOD(DATEVALUE(Last_Stage_Change_Date__c)-DATE(1996,01,01), 7) +
	MIN(1, 24/8*(MOD(IF(AND(Last_Stage_Change_Date__c &lt; DATETIMEVALUE(TEXT(YEAR(DATEVALUE(Last_Stage_Change_Date__c))) + &apos;-&apos; + TEXT(MONTH(DATEVALUE(Last_Stage_Change_Date__c))) + &apos;-&apos; + TEXT(DAY(DATEVALUE(Last_Stage_Change_Date__c))) + &apos; 23:00:00&apos;),Last_Stage_Change_Date__c &gt;= DATETIMEVALUE(TEXT(YEAR(DATEVALUE(Last_Stage_Change_Date__c))) + &apos;-&apos; + TEXT(MONTH(DATEVALUE(Last_Stage_Change_Date__c))) + &apos;-&apos; + TEXT(DAY(DATEVALUE(Last_Stage_Change_Date__c))) + &apos; 14:00:00&apos;)),DATETIMEVALUE(TEXT(YEAR(DATEVALUE(Last_Stage_Change_Date__c))) + &apos;-&apos; + TEXT(MONTH(DATEVALUE(Last_Stage_Change_Date__c))) + &apos;-&apos; + TEXT(DAY(DATEVALUE(Last_Stage_Change_Date__c))) + &apos; 23:00:00&apos;),Last_Stage_Change_Date__c) - DATETIMEVALUE(&apos;1996-01-01 23:00:00&apos;), 1)))
))
),
8*(
(5*FLOOR((DATEVALUE(Now())-DATE(1996,01,01))/7) +
MIN(5,
	MOD(DATEVALUE(Now())-DATE(1996,01,01), 7) +
	MIN(1, 24/8*(MOD(Now()-DATETIMEVALUE(&apos;1996-01-01 23:00:00&apos;), 1)))
))
-
(5*FLOOR((DATEVALUE(Last_Stage_Change_Date__c)-DATE(1996,01,01))/7) +
MIN(5,
	MOD(DATEVALUE(Last_Stage_Change_Date__c)-DATE(1996,01,01), 7) +
	MIN(1, 24/8*(MOD(IF(AND(Last_Stage_Change_Date__c &lt; DATETIMEVALUE(TEXT(YEAR(DATEVALUE(Last_Stage_Change_Date__c))) + &apos;-&apos; + TEXT(MONTH(DATEVALUE(Last_Stage_Change_Date__c))) + &apos;-&apos; + TEXT(DAY(DATEVALUE(Last_Stage_Change_Date__c))) + &apos; 23:00:00&apos;),Last_Stage_Change_Date__c &gt;= DATETIMEVALUE(TEXT(YEAR(DATEVALUE(Last_Stage_Change_Date__c))) + &apos;-&apos; + TEXT(MONTH(DATEVALUE(Last_Stage_Change_Date__c))) + &apos;-&apos; + TEXT(DAY(DATEVALUE(Last_Stage_Change_Date__c))) + &apos; 14:00:00&apos;)),DATETIMEVALUE(TEXT(YEAR(DATEVALUE(Last_Stage_Change_Date__c))) + &apos;-&apos; + TEXT(MONTH(DATEVALUE(Last_Stage_Change_Date__c))) + &apos;-&apos; + TEXT(DAY(DATEVALUE(Last_Stage_Change_Date__c))) + &apos; 23:00:00&apos;),Last_Stage_Change_Date__c) - DATETIMEVALUE(&apos;1996-01-01 23:00:00&apos;), 1)))
))
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Hours at Current Stage</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>