force-app/main/default/objects/Opportunity/fields/Certificate_of_Currency__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Currency__c</fullName>
    <description>Certificate of currency updated to list incoming lender as an interested party on the policy</description>
    <inlineHelpText>Certificate of currency updated to list incoming lender as an interested party on the policy</inlineHelpText>
    <label>Certificate of Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Request sent to client</fullName>
            </value>
            <value>
                <fullName>Received from client</fullName>
            </value>
            <value>
                <fullName>Sent to incoming lender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>