force-app/main/default/objects/Opportunity/fields/CF_Date_Due_Paid__c.field-meta.xml
<CustomField>
    <fullName>CF_Date_Due_Paid__c</fullName>
    <label>CF Date Due/Paid</label>
    <type>Date</type>
</CustomField>