force-app/main/default/objects/Opportunity/fields/CF_Paid_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>CF_Paid_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CF Paid Confirmed</label>
    <type>Checkbox</type>
</CustomField>