force-app/main/default/objects/Opportunity/fields/CF_Paid_Confirmed_Text__c.field-meta.xml
<CustomField>
    <fullName>CF_Paid_Confirmed_Text__c</fullName>
    <formula>IF ( CF_Paid_Confirmed__c = TRUE , &quot;True&quot; , &quot;false&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CF Paid Confirmed Text</label>
    <type>Text</type>
</CustomField>