force-app/main/default/objects/Opportunity/fields/CF_Rate_inc_GST__c.field-meta.xml
<CustomField>
    <fullName>CF_Rate_inc_GST__c</fullName>
    <inlineHelpText>Display percentages as decimal places. E.g. 0.15% should be entered as 0.0015</inlineHelpText>
    <label>CF Rate inc GST</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>